--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,1 +1,51 @@
 /* Dasmoto's Arts & Crafts CSS */
+
+* {
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  padding: 5px;
+}
+
+h1 {
+  font-family: Helvetica;
+  font-size: 100px;
+  font-weight: bold;
+  color: khaki;
+  padding: 10px;
+  margin: 40px 0;
+  background-image: url("../img/pattern.jpeg");
+}
+
+h2 {
+  font-family: Helvetica;
+  font-size: 32px;
+  font-weight: bold;
+  color: white;
+}
+
+section img {
+  padding: 30px 0;
+}
+
+.brushes {
+  background-color: mediumspringgreen;
+}
+
+.frames {
+  background-color: lightcoral;
+  margin-top: 15px;
+}
+
+.paint {
+  background-color: skyblue;
+  margin-top: 15px;
+}
+
+.blue-text {
+  font-family: Helvetica;
+  font-weight: bold;
+  color: blue;
+}
